# aviator

./: .gitignore  10-dummy.conf  Dockerfile  eagle_shot.py  forecasting_strategy.py  highest_markov_probs_p.csv  live.sh  loss_lurker.py  markov_model_strategy.py  markov_ngram_strategy.py  markov_strategy.py  ngram_predictions.py  playground.ipynb  pyproject.toml  random_chooser_strategy.py  sporty_aviator_data.csv  sporty_data_collector.py  sporty_eagle_shot.py  test.py
artificial_live_bet_history/: live_bet_history.json
bot/: __init__.py
data/: prediction_history_20250410_225249.json  prediction_history_20250411_072421.json  prediction_history_20250411_072550.json  prediction_history_20250411_072723.json  prediction_history_20250411_072815.json  prediction_history_20250411_072932.json  prediction_history_20250411_073038.json  prediction_history_20250411_073327.json  prediction_history_20250411_073432.json  prediction_history_20250411_073620.json  prediction_history_20250411_145959.json  prediction_history_20250411_151516.json  prediction_history_20250411_151555.json  prediction_history_20250411_162503.json  prediction_history_20250411_162600.json  prediction_history_20250411_170902.json  prediction_history_20250411_200747.json  prediction_history_20250411_200823.json  prediction_history_20250411_200853.json  prediction_history_20250411_210004.json  prediction_history_20250411_210045.json  prediction_history_20250411_210136.json  prediction_history_20250411_210201.json  prediction_history_20250411_220548.json  prediction_history_20250411_220627.json  (+18 more)
(+419 files in other folders)
